fixed percentage overlapping issue
Former-commit-id: ba2a8f1e0bb13fbe7ef72b333f4daaa5b64a99f5

--- a/assets/less/edware.less
+++ b/assets/less/edware.less
@@ -602,13 +602,13 @@ table {
   .leftPercentageTotal{
       float: left;
       width: 35px;
-      /* padding-right: 5px; */
+      height: 20px;
   }
   
   .rightPercentageTotal{
       float: right;
       width: 35px;
-      /* padding-left: 5px; */
+      height: 20px;
   }
 
 }
